[package]
name = "elog"
version = "0.1.0"
authors = ["xt <motoyang@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4.8"
env_logger = "^0.7.1"
chrono = "^0.4.9"
ring-channel = "^0.7"
# lazy_static = "^1.4"

[lib]
name = "elog"