project(examples)

set(UV_LIB "uv")
set(PTHREAD_LIB "pthread")

macro (example_build arg1)
  set(EXAMPLE_TARGET ${arg1})
  file(GLOB EXAMPLE_SRC_FILES "${EXAMPLE_TARGET}/*.cpp")   
  add_executable(${EXAMPLE_TARGET} ${EXAMPLE_SRC_FILES})
  target_link_libraries(${EXAMPLE_TARGET} ${UV_LIB} ${PTHREAD_LIB})
endmacro (example_build)

example_build(helloworld)
example_build(idle-basic) 
example_build(idle-compute)
example_build(uvcat)
example_build(uvtee)
example_build(onchange)
example_build(tcp-echo-server)
example_build(tcp-echo-client)
example_build(interfaces)
example_build(udp-dhcp)
example_build(dns)
example_build(thread-create)

