[package]
name = "bank"
version = "0.1.0"
authors = ["xt <motoyang@163.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "bank"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[dependencies]
log = "^0.4.8"
elog = { path = "../../level_1/elog"}
futures = "^0.3.1"
serde = { version = "^1.0", features = ["derive"]}
bincode = { version = "^1.2.1" }
servant = {path = "../servant", features = ["full"]}
# servant-macro = {path = "../servant-macro", features = ["full"]}
lazy_static = "^1.4.0"

[dependencies.async-std]
version = "^1.3"
features = ["unstable", "attributes"]
