[package]
name = "codec"
version = "0.1.0"
authors = ["xt <motoyang@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures_codec = "^0.3.4"
bytes = "^0.5.3"
ring = "^0.16"
byteorder= "^1.3.2"
serde = { version = "^1.0",features = ["derive"]}
bincode = { version = "^1.2.1" }

[dev-dependencies]
futures = "^0.3.1"
test-case = "1.0.0-alpha-1"