[package]
name = "servant-macro"
version = "0.1.0"
authors = ["xt <motoyang@163.com>"]
edition = "2018"

[dependencies]
syn = { version = "^1.0.11", features = ["full"] }
quote = "^1.0.2"
# proc-macro2 = "^1.0.6"

[lib]
proc-macro = true

[dev-dependencies]
# futures = "0.3"
# serde = { version = "1.0", features = ["derive"] }
# tarpc = { path = "../tarpc" }
test-case = "^1.0.0-alpha-1"