[package]
name = "servant-macro"
version = "0.1.0"
authors = ["xt <motoyang@163.com>"]
edition = "2018"

[lib]
proc-macro = true

[features]
invoke = []
query = []
notify = []
report = []
adapter = []
terminal = []

# default = ["invoke", "query", "adapter", "terminal"]
# full = ["invoke", "query", "report", "notify", "adapter", "terminal"]

[dependencies]
syn = { version = "^1.0.11", features = ["default"] }
quote = "^1.0.2"
proc-macro2 = "^1.0.6"

[dev-dependencies]
test-case = "^1.0.0-alpha-1"

