[package]
name = "servant"
version = "0.1.0"
authors = ["xt <motoyang@163.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
log = "^0.4.8"
elog = { path = "../../level_1/elog"}
bytes = "^0.5.3"
futures_codec = "^0.3.4"
futures = "^0.3.1"
codec = { path = "../codec" }
serde = { version = "^1.0",features = ["derive"]}
bincode = { version = "^1.2.1" }
lazy_static = "^1.4.0"
# crossbeam-channel = "^0.4.0"

[dependencies.async-std]
version = "^1.3"
features = ["unstable"]
