[package]
name = "bee2"
version = "0.1.0"
authors = ["xt <motoyang@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "*"
tokio-codec = "*"
futures = "*"
bytes = "*"
env_logger = "*"
log = "*"
chrono = "*"
ring = "^0.16"
lazy_static = "^1.4"

[lib]
name = "bee2"
path = "src/lib.rs"
